# textual-pandas

./: LICENSE  README.md  pyproject.toml
examples/: main.py
textual_pandas/: __init__.py  widgets.py
