[tool.poetry]
name = "textual-pandas"
homepage = "https://github.com/dannywade/textual-pandas"
version = "0.2.1"
description = "A module to build Textual widgets that represent data from the Pandas library"
authors = ["Dan Wade <danny.wade35@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "textual_pandas"}]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.23.0"
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
