[tool.poetry]
name = "textual-pandas"
homepage = "https://github.com/dannywade/textual-pandas"
version = "0.2.2"
description = "A module to build Textual widgets that represent data from the Pandas library"
authors = ["Dan Wade <danny.wade35@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "textual_pandas"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
textual = "<=0.58.0, >=0.23.0"
pandas = "<=2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
